hrtimer: Allow concurrent hrtimer_start() for self restarting timers